Lisztázó oldalak félkész

--- a/frontend/src/app/page/product/product.component.html
+++ b/frontend/src/app/page/product/product.component.html
@@ -24,6 +24,7 @@
   </div>
 </div>
 <h2>Product List</h2>
+<!--  Seed-elés az angular-ból -->
 <!-- <div class="row">
   <div (click)="createCategories()" class="col-12"><button class="btn btn-success">
     Create Categories
