--- a/frontend/src/app/data-table/ngx-data-table/ngx-data-table.component.html
+++ b/frontend/src/app/data-table/ngx-data-table/ngx-data-table.component.html
@@ -11,7 +11,7 @@
     </thead>
     <tbody>
       <tr *ngFor="let row of list | slice:startSlice:endSlice">
-        <td *ngFor="let col of columns"> {{ row[col.key] }} </td>
+        <td *ngFor="let col of columns"> {{ row[col.key] |unfold }} </td>
         <td>
           <div class="btn-group">
             <button (click)="raiseEdit(row)" class="btn btn-info">
