--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -7,3 +7,8 @@
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
 
 @import "src/assets/scss/dashboard";
+
+.error-message{
+  color: red;
+  font-style: italic;
+}
