--- a/frontend/src/app/page/librarian-editor/librarian-editor.component.html
+++ b/frontend/src/app/page/librarian-editor/librarian-editor.component.html
@@ -1,30 +1,63 @@
-<p>librarian-editor works!</p>
-<ngx-data-table-editor></ngx-data-table-editor>
-
 <form #editForm="ngForm" (ngSubmit)="update(item)" *ngIf="item$ | async as item" class=" col-4">
-
-  <!-- <div class="form-group">
-    <label for="name" class="form-label">Name</label>
-    <input id="name" name="name" [(ngModel)]="item.name" type="text" class="form-control" pattern="[a-űA-Ű \d\.\-\(\)]{5,}"
-      required>
+  <input required [(ngModel)]="item._id" type="hidden" name="id">
+  <div class="form-group">
+    <label for="name" class="form-label, h6">Name</label>
+    <input id="name" name="name" [(ngModel)]="item.name" type="text" class="form-control"
+      pattern="[a-űA-Ű \d\.\-\(\)]{5,}" required>
     <span [hidden]="editForm.controls['name']?.valid" class="error-message">Please fix the field!</span>
-  </div> -->
+  </div>
+  <div class="form-group">
+    <label for="username" class="form-label h6">User name</label>
+    <input id="username" name="username" [(ngModel)]="item.username" type="text" class="form-control"
+      pattern="(editor|admin)" required>
+    <span [hidden]="editForm.controls['username']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="location" class="form-label h6">Location</label>
+    <input id="location" name="location" [(ngModel)]="item.location" type="text" class="form-control" pattern="\d{1,3}"
+      required>
+    <span [hidden]="editForm.controls['location']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="role" class="form-label h6">Role</label>
+    <input id="role" name="role" [(ngModel)]="item.role" type="text" class="form-control" pattern="[123]" required>
+    <span [hidden]="editForm.controls['role']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="phone" class="form-label h6">Phone</label>
+    <input id="phone" name="phone" [(ngModel)]="item.phone" type="text" class="form-control" pattern="\d{3}" required>
+    <span [hidden]="editForm.controls['phone']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="active" class="form-label h6">Active</label>
+    <input id="active" name="active" [(ngModel)]="item.active" type="text" class="form-control" pattern="(true|false)"
+      required>
+    <span [hidden]="editForm.controls['active']?.valid" class="error-message">Please fix the field!</span>
+  </div>
 
-  <div *ngFor= "let key of keys"  [hidden]="key=='_id'" class="form-group">
-    <label for=key class="form-label">{{key |titlecase}}</label>
-    <input id=key name=key [(ngModel)]="item[key]" type="text" class="form-control" pattern="^[a-űA-Ű \d\.\-\(\)]{5,}$"
+  <button type="submit" [disabled]="editForm.invalid" type="submit" class="btn btn-primary mt-4 w-100">
+    <i class="fa fa-save"> </i>
+  </button>
+  <button [routerLink]="['/librarian']" (click)="create(item)" type="submit" class="btn btn-info mt-4 w-100">
+    <i class="fa fa-plus-square" aria-hidden="true"> New item </i>
+  </button>
+</form>
+
+
+<!--
+    todo: Ezt itthagyom későbbi, beadás utáni próbára
+    <div *ngFor= "let key of keys"  [hidden]="key=='_id'" class="form-group">
+    <label for=key class="form-label h6">{{key |titlecase}}</label>
+    <input [id]=key [name]=key [(ngModel)]="item[key]" type="text" class="form-control" pattern="^[a-űA-Ű \d\.\-\(\)]{5,}$"
       required>
     <span [hidden]="editForm.controls[key].valid" class="error-message">Please fix the field!</span>
   </div>
 
+<p>librarian-editor works!</p>
+<ngx-data-table-editor></ngx-data-table-editor>
+-->
 
-
-  <button [disabled]="editForm.invalid" type="submit" class="btn btn-primary mt-4 w-100">
-    <i class="fa fa-save"> </i>
-  </button>
-
-  <!--
+<!--
   {{ item | json}}
   {{ cat | json}}
   </div> -->
-</form>
