--- a/frontend/src/app/page/librarian/librarian.component.html
+++ b/frontend/src/app/page/librarian/librarian.component.html
@@ -1,6 +1,6 @@
 <h2>Librarian List</h2>
 
 <!-- átadjuk a központi táblakomponensnek a konkrét megjelenítési paramétereit -->
-<ngx-data-table *ngIf="list$ | async as list" [columns]="columns" [list]="list" (onEdit)="startEdit($event)">
+<ngx-data-table *ngIf="list$ | async as list" [columns]="columns" [list]="list" (onEdit)="startEdit($event)" (onDelete)="startDelete($event)" >
 </ngx-data-table>
-{{list$ | async | json}}
+<!-- {{list$ | async | json}} -->
