--- a/frontend/src/app/data-table/ngx-data-table/ngx-data-table.component.html
+++ b/frontend/src/app/data-table/ngx-data-table/ngx-data-table.component.html
@@ -15,7 +15,7 @@
         <td>
           <div class="btn-group">
             <button (click)="raiseEdit(row)" class="btn btn-info">
-              <i class="fa fa-plus-square"></i> & <i class="fa fa-pencil"></i>
+              <i class="fa fa-plus-square"></i><strong>    /   </strong><i class="fa fa-pencil"></i>
             </button>
             <button (click)="raiseDelete(row['_id'])" class="btn btn-danger">
               <i class="fa fa-trash"> </i>
