--- a/frontend/src/app/page/borrow-editor/borrow-editor.component.html
+++ b/frontend/src/app/page/borrow-editor/borrow-editor.component.html
@@ -1,1 +1,34 @@
-<p>borrow-editor works!</p>
+<form #editForm="ngForm" (ngSubmit)="update(item)" *ngIf="item$ | async as item" class=" col-4">
+  <input required [(ngModel)]="item._id" type="hidden" name="id">
+  <div class="form-group">
+    <label for="date" class="form-label, h6">Date</label>
+    <input id="date" name="date" [(ngModel)]="item.date" type="text" class="form-control"
+      pattern="\d{13}" required>
+    <span [hidden]="editForm.controls['date']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="member_id" class="form-label h6">Member</label>
+    <input id="member_id" name="member_id" (ngModel)="item.member_id" type="text" class="form-control"
+    pattern="\d{22,26}" required>
+    <span [hidden]="editForm.controls['member_id']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="book_ids" class="form-label h6">Book</label>
+    <input id="book_ids" name="book_ids" (ngModel)="item.book_ids" type="text" class="form-control" pattern="\d{22,26}"
+      required>
+    <span [hidden]="editForm.controls['book_ids']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="active" class="form-label h6">Active</label>
+    <input id="active" name="active" [(ngModel)]="item.active" type="text" class="form-control" pattern="(true|false)"
+      required>
+    <span [hidden]="editForm.controls['active']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+
+  <button type="submit" [disabled]="editForm.invalid" type="submit" class="btn btn-primary mt-4 w-100">
+    <i class="fa fa-save"> </i>
+  </button>
+  <button [routerLink]="['/borrow']" (click)="create(item)" type="submit" class="btn btn-info mt-4 w-100">
+    <i class="fa fa-plus-square" aria-hidden="true"> New item </i>
+  </button>
+</form>
