--- a/frontend/src/app/page/home/home.component.html
+++ b/frontend/src/app/page/home/home.component.html
@@ -1,1 +1,3 @@
-<h1 class="h2">Dashboard</h1>
+<h1 class="h2">Library borrow registration system(Under  construction)</h1>
+<!-- <img src="src/assets/Under-Construction-Sign.png" alt="Under  construction">
+<picture></picture> -->
