--- a/frontend/src/app/page/member-editor/member-editor.component.html
+++ b/frontend/src/app/page/member-editor/member-editor.component.html
@@ -1,1 +1,60 @@
-<p>member-editor works!</p>
+<form #editForm="ngForm" (ngSubmit)="update(item)" *ngIf="item$ | async as item" class=" col-4">
+  <input required [(ngModel)]="item._id" type="hidden" name="id">
+  <div class="form-group">
+    <label for="name" class="form-label, h6">Name</label>
+    <input id="name" name="name" [(ngModel)]="item.name" type="text" class="form-control"
+    pattern="^[A-Z][a-űA-Ű \d\.\-\(\)]{2,}" required>
+    <span [hidden]="editForm.controls['name']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="uid" class="form-label h6">User ID</label>
+    <input id="uid" name="uid" [(ngModel)]="item.uid" type="text" class="form-control"
+    pattern="\d{1,3}" required>
+    <span [hidden]="editForm.controls['uid']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="mother" class="form-label h6">Mother name</label>
+    <input id="mother" name="mother" [(ngModel)]="item.mother" type="text" class="form-control"  pattern="^[A-Z][a-űA-Ű \d\.\-\(\)]{2,}"
+      required>
+    <span [hidden]="editForm.controls['mother']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="birthplace" class="form-label h6">Birth place</label>
+    <input id="birthplace" name="birthplace" [(ngModel)]="item.birthplace" type="text" class="form-control"   pattern="^[A-Z][a-űA-Ű \d\.\-\(\)]{2,}" required>
+    <span [hidden]="editForm.controls['birthplace']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="birthdate" class="form-label h6">Birth date</label>
+    <input id="birthdate" name="birthdate" [(ngModel)]="item.birthdate" type="text" class="form-control" pattern="^\d{4}-\d{2}-\d{2}" required>
+    <span [hidden]="editForm.controls['birthdate']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="address" class="form-label h6">Address</label>
+    <input id="address" name="address" [(ngModel)]="item.address" type="text" class="form-control" pattern="^[a-űA-Ű \d\.\-\(\)]{2,}" required>
+    <span [hidden]="editForm.controls['address']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="email" class="form-label h6">Email</label>
+    <input id="email" name="email" [(ngModel)]="item.email" type="email" email class="form-control">
+    <span [hidden]="editForm.controls['email']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="phone" class="form-label h6">Phone</label>
+    <input id="phone" name="phone" [(ngModel)]="item.phone" type="text" class="form-control" pattern="\d{8,10}">
+    <span [hidden]="editForm.controls['phone']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+  <div class="form-group">
+    <label for="active" class="form-label h6">Active</label>
+    <input id="active" name="active" [(ngModel)]="item.active" type="text" class="form-control" pattern="(true|false)"
+      required>
+    <span [hidden]="editForm.controls['active']?.valid" class="error-message">Please fix the field!</span>
+  </div>
+
+  <button type="submit" [disabled]="editForm.invalid" type="submit" class="btn btn-primary mt-4 w-100">
+    <i class="fa fa-save"> </i>
+  </button>
+  <button [routerLink]="['/member']" (click)="create(item)" type="submit" class="btn btn-info mt-4 w-100">
+    <i class="fa fa-plus-square" aria-hidden="true"> New item </i>
+  </button>
+</form>
+
