--- a/frontend/src/app/page/home/home.component.html
+++ b/frontend/src/app/page/home/home.component.html
@@ -1,3 +1,6 @@
+<h2 class="h3">Welcome here!</h2>
+<br>
+<br>
 <h1 class="h2">Library borrow registration system(Under  construction)</h1>
 <!-- <img src="src/assets/Under-Construction-Sign.png" alt="Under  construction">
 <picture></picture> -->
